devnull
  File "xxx", line 1
    python3: can't open file 'ttt': [Errno 2] No such file or directory
                             ^
SyntaxError: invalid syntax
